--- a/Depo/Depo/Presentation/SubViews/PhotoEditViews/Adjustments/AdjustmentViews/AdjustView/AdjustView.xib
+++ b/Depo/Depo/Presentation/SubViews/PhotoEditViews/Adjustments/AdjustmentViews/AdjustView/AdjustView.xib
@@ -17,12 +17,12 @@
                 <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="Mtj-QW-bSX">
                     <rect key="frame" x="0.0" y="0.0" width="414" height="100"/>
                     <subviews>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cgx-m3-Q6G">
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cgx-m3-Q6G">
                             <rect key="frame" x="0.0" y="0.0" width="44" height="100"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="44" id="KAH-Lw-ng2"/>
                             </constraints>
-                            <state key="normal" title="LB"/>
+                            <state key="normal" image="photo_edit_resize"/>
                             <connections>
                                 <action selector="onLeftButtonTapped:" destination="iz6-KA-1la" eventType="touchUpInside" id="s1z-bS-yTi"/>
                             </connections>
@@ -74,12 +74,12 @@
                                 <constraint firstItem="mvn-X4-JpP" firstAttribute="top" secondItem="JFD-qw-fEd" secondAttribute="bottom" id="v2g-J7-SQY"/>
                             </constraints>
                         </view>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CrV-2P-1R7">
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CrV-2P-1R7">
                             <rect key="frame" x="370" y="0.0" width="44" height="100"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="44" id="R0e-ud-HOn"/>
                             </constraints>
-                            <state key="normal" title="RB"/>
+                            <state key="normal" title="RB" image="photo_edit_rotate"/>
                             <connections>
                                 <action selector="onRightButtonTapped:" destination="iz6-KA-1la" eventType="touchUpInside" id="sBC-rH-iZI"/>
                             </connections>
@@ -108,4 +108,8 @@
             <point key="canvasLocation" x="137.68115942028987" y="141.29464285714286"/>
         </view>
     </objects>
+    <resources>
+        <image name="photo_edit_resize" width="20" height="20"/>
+        <image name="photo_edit_rotate" width="20" height="20"/>
+    </resources>
 </document>
