--- a/Depo/Depo/Presentation/SubViews/PhotoEditViews/Bars/Navbar/PhotoEditNavbar.xib
+++ b/Depo/Depo/Presentation/SubViews/PhotoEditViews/Bars/Navbar/PhotoEditNavbar.xib
@@ -20,7 +20,7 @@
                         <constraint firstAttribute="height" constant="44" id="4oK-Zj-MJb"/>
                         <constraint firstAttribute="width" secondItem="7X9-5e-0ll" secondAttribute="height" multiplier="1:1" id="ccp-Ev-S0t"/>
                     </constraints>
-                    <state key="normal" image="closeButton"/>
+                    <state key="normal" image="photo_edit_cancel"/>
                     <connections>
                         <action selector="onClose:" destination="k01-WW-6iS" eventType="touchUpInside" id="65r-kI-g5p"/>
                     </connections>
@@ -50,7 +50,7 @@
                             <constraints>
                                 <constraint firstAttribute="width" constant="30" id="KJb-eu-Vks"/>
                             </constraints>
-                            <state key="normal" image="more"/>
+                            <state key="normal" image="photo_edit_3dots"/>
                             <connections>
                                 <action selector="onMore:" destination="k01-WW-6iS" eventType="touchUpInside" id="Vzq-5M-yg4"/>
                             </connections>
@@ -81,7 +81,7 @@
     </objects>
     <resources>
         <image name="ShareButtonIcon" width="24" height="27"/>
-        <image name="closeButton" width="15" height="15"/>
-        <image name="more" width="24" height="6"/>
+        <image name="photo_edit_3dots" width="20" height="20"/>
+        <image name="photo_edit_cancel" width="20" height="20"/>
     </resources>
 </document>
