--- a/Depo/Depo/Presentation/SubViews/PhotoEditViews/Adjustments/AdjustmentCategoriesView/AdjustmentCategoryCell.xib
+++ b/Depo/Depo/Presentation/SubViews/PhotoEditViews/Adjustments/AdjustmentCategoriesView/AdjustmentCategoryCell.xib
@@ -11,17 +11,24 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="AdjustmentCategoryCell" customModule="Billo" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="113" height="90"/>
+            <rect key="frame" x="0.0" y="0.0" width="65" height="77"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="113" height="90"/>
+                <rect key="frame" x="0.0" y="0.0" width="65" height="77"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Nm0-7d-mhS">
-                        <rect key="frame" x="0.0" y="0.0" width="113" height="61"/>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Nm0-7d-mhS">
+                        <rect key="frame" x="18" y="17" width="29" height="29"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="29" id="eBB-eV-kvi"/>
+                            <constraint firstAttribute="width" constant="29" id="n25-lC-0Hb"/>
+                        </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RuU-P9-qsI">
-                        <rect key="frame" x="0.0" y="61" width="113" height="21"/>
+                        <rect key="frame" x="0.0" y="51" width="65" height="14"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="14" id="NAB-h6-mje"/>
+                        </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
@@ -29,12 +36,10 @@
                 </subviews>
             </view>
             <constraints>
-                <constraint firstItem="RuU-P9-qsI" firstAttribute="top" secondItem="Nm0-7d-mhS" secondAttribute="bottom" id="0cC-kJ-IBt"/>
-                <constraint firstItem="Nm0-7d-mhS" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="ChI-j3-pDo"/>
-                <constraint firstAttribute="trailing" secondItem="Nm0-7d-mhS" secondAttribute="trailing" id="FZ8-Mg-8oz"/>
-                <constraint firstAttribute="bottom" secondItem="RuU-P9-qsI" secondAttribute="bottom" constant="8" id="H5U-0U-XCd"/>
+                <constraint firstItem="Nm0-7d-mhS" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="8bp-Lc-db3"/>
+                <constraint firstAttribute="bottom" secondItem="RuU-P9-qsI" secondAttribute="bottom" constant="12" id="H5U-0U-XCd"/>
                 <constraint firstAttribute="trailing" secondItem="RuU-P9-qsI" secondAttribute="trailing" id="W8r-ee-wfy"/>
-                <constraint firstItem="Nm0-7d-mhS" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="ZIg-tS-oj1"/>
+                <constraint firstItem="Nm0-7d-mhS" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="17" id="eIU-Xq-KC8"/>
                 <constraint firstItem="RuU-P9-qsI" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="jVX-ts-FGG"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
@@ -43,7 +48,7 @@
                 <outlet property="imageView" destination="Nm0-7d-mhS" id="eAY-Xk-Ihp"/>
                 <outlet property="titleLabel" destination="RuU-P9-qsI" id="x4o-hw-IAl"/>
             </connections>
-            <point key="canvasLocation" x="183.33333333333334" y="173.10267857142856"/>
+            <point key="canvasLocation" x="-131" y="-2"/>
         </collectionViewCell>
     </objects>
 </document>
