--- a/Depo/Depo/Presentation/SubViews/PhotoEditViews/Adjustments/AdjustmentViews/HSLView/HSLView.xib
+++ b/Depo/Depo/Presentation/SubViews/PhotoEditViews/Adjustments/AdjustmentViews/HSLView/HSLView.xib
@@ -11,10 +11,10 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="mpr-F4-0ZU" customClass="HSLView" customModule="Billo" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="414" height="60"/>
+            <rect key="frame" x="0.0" y="0.0" width="414" height="70"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="dMS-kK-eWA">
+                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="6" translatesAutoresizingMaskIntoConstraints="NO" id="dMS-kK-eWA">
                     <rect key="frame" x="0.0" y="16" width="414" height="44"/>
                     <subviews>
                         <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="KLr-8g-F78">
@@ -35,7 +35,7 @@
             </subviews>
             <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
             <constraints>
-                <constraint firstItem="dMS-kK-eWA" firstAttribute="bottom" secondItem="mpr-F4-0ZU" secondAttribute="bottom" id="6YA-gH-jch"/>
+                <constraint firstAttribute="bottom" secondItem="dMS-kK-eWA" secondAttribute="bottom" constant="10" id="6YA-gH-jch"/>
                 <constraint firstItem="dMS-kK-eWA" firstAttribute="top" secondItem="mpr-F4-0ZU" secondAttribute="top" constant="16" id="9R0-kX-7RI"/>
                 <constraint firstItem="dMS-kK-eWA" firstAttribute="leading" secondItem="mpr-F4-0ZU" secondAttribute="leading" id="JaU-BD-sER"/>
                 <constraint firstItem="dMS-kK-eWA" firstAttribute="trailing" secondItem="mpr-F4-0ZU" secondAttribute="trailing" id="mmA-8d-UOR"/>
