--- a/Depo/Depo/Presentation/SubViews/PhotoEditViews/Filters/PreparedFilterSliderView/PreparedFilterSliderView.xib
+++ b/Depo/Depo/Presentation/SubViews/PhotoEditViews/Filters/PreparedFilterSliderView/PreparedFilterSliderView.xib
@@ -11,27 +11,42 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="PreparedFilterSliderView" customModule="Billo" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
+            <rect key="frame" x="0.0" y="0.0" width="414" height="65"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Hfv-WU-IWO">
-                    <rect key="frame" x="0.0" y="20" width="414" height="24"/>
+                    <rect key="frame" x="0.0" y="36" width="414" height="16"/>
                     <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="16" id="24q-cu-LvE"/>
+                    </constraints>
                 </view>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qvC-BD-h5v">
+                    <rect key="frame" x="356" y="16" width="42" height="16"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="16" id="SG2-H8-NXq"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <nil key="textColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
             </subviews>
             <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
             <constraints>
-                <constraint firstItem="Hfv-WU-IWO" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="20" symbolic="YES" id="5ot-my-A84"/>
-                <constraint firstAttribute="bottom" secondItem="Hfv-WU-IWO" secondAttribute="bottom" id="NIF-1s-vXe"/>
+                <constraint firstItem="qvC-BD-h5v" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="16" id="0RH-Vj-nMH"/>
+                <constraint firstAttribute="bottom" secondItem="Hfv-WU-IWO" secondAttribute="bottom" constant="13" id="QfX-Gj-f7k"/>
+                <constraint firstAttribute="trailing" secondItem="qvC-BD-h5v" secondAttribute="trailing" constant="16" id="WjC-W2-kSy"/>
                 <constraint firstItem="Hfv-WU-IWO" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="exN-6V-Xud"/>
                 <constraint firstAttribute="trailing" secondItem="Hfv-WU-IWO" secondAttribute="trailing" id="ld6-Zy-1yJ"/>
+                <constraint firstItem="Hfv-WU-IWO" firstAttribute="top" secondItem="qvC-BD-h5v" secondAttribute="bottom" constant="4" id="wGD-B2-NVj"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <connections>
                 <outlet property="sliderContentView" destination="Hfv-WU-IWO" id="eSE-1d-sch"/>
+                <outlet property="valueLabel" destination="qvC-BD-h5v" id="HiL-yM-lLk"/>
             </connections>
-            <point key="canvasLocation" x="137.68115942028987" y="110.49107142857143"/>
+            <point key="canvasLocation" x="137.68115942028987" y="115.84821428571428"/>
         </view>
     </objects>
 </document>
