--- a/Depo/Depo/Presentation/SubViews/PhotoEditViews/Filters/PreparedFiltersView/PreparedFilterCell.xib
+++ b/Depo/Depo/Presentation/SubViews/PhotoEditViews/Filters/PreparedFiltersView/PreparedFilterCell.xib
@@ -10,23 +10,23 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="PreparedFilterCell" customModule="Billo" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="80" height="120"/>
+            <rect key="frame" x="0.0" y="0.0" width="64" height="88"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="80" height="120"/>
+                <rect key="frame" x="0.0" y="0.0" width="64" height="88"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PF7-8N-ywW">
-                        <rect key="frame" x="0.0" y="0.0" width="80" height="90"/>
+                        <rect key="frame" x="0.0" y="0.0" width="64" height="64"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="f6o-bn-nr8">
-                                <rect key="frame" x="0.0" y="0.0" width="80" height="90"/>
+                                <rect key="frame" x="0.0" y="0.0" width="64" height="64"/>
                             </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ASw-qu-qdg">
-                                <rect key="frame" x="0.0" y="0.0" width="80" height="90"/>
+                                <rect key="frame" x="0.0" y="0.0" width="64" height="64"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="photo_edit_tabbar_adjustments" translatesAutoresizingMaskIntoConstraints="NO" id="j9u-rw-LPI">
-                                        <rect key="frame" x="0.0" y="0.0" width="80" height="90"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="64" height="64"/>
                                         <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     </imageView>
                                 </subviews>
@@ -34,6 +34,7 @@
                                 <constraints>
                                     <constraint firstAttribute="bottom" secondItem="j9u-rw-LPI" secondAttribute="bottom" id="1kO-nz-H4r"/>
                                     <constraint firstItem="j9u-rw-LPI" firstAttribute="leading" secondItem="ASw-qu-qdg" secondAttribute="leading" id="F11-am-02q"/>
+                                    <constraint firstAttribute="width" secondItem="ASw-qu-qdg" secondAttribute="height" multiplier="1:1" id="HW0-yq-HTv"/>
                                     <constraint firstAttribute="trailing" secondItem="j9u-rw-LPI" secondAttribute="trailing" id="qYo-Jk-QVt"/>
                                     <constraint firstItem="j9u-rw-LPI" firstAttribute="top" secondItem="ASw-qu-qdg" secondAttribute="top" id="tgg-Bl-9hx"/>
                                 </constraints>
@@ -52,7 +53,10 @@
                         </constraints>
                     </view>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YQA-7I-Pju">
-                        <rect key="frame" x="0.0" y="92" width="80" height="28"/>
+                        <rect key="frame" x="0.0" y="74" width="64" height="14"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="14" id="V3v-6p-XWP"/>
+                        </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
@@ -63,10 +67,9 @@
                 <constraint firstAttribute="trailing" secondItem="PF7-8N-ywW" secondAttribute="trailing" id="96a-8T-akd"/>
                 <constraint firstItem="PF7-8N-ywW" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="KAW-13-PFm"/>
                 <constraint firstItem="YQA-7I-Pju" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="PzY-wY-GN6"/>
-                <constraint firstAttribute="bottom" secondItem="PF7-8N-ywW" secondAttribute="bottom" constant="30" id="SIK-pU-Vtc"/>
+                <constraint firstItem="YQA-7I-Pju" firstAttribute="top" secondItem="PF7-8N-ywW" secondAttribute="bottom" priority="750" constant="10" id="WNo-cO-HOH"/>
                 <constraint firstAttribute="bottom" secondItem="YQA-7I-Pju" secondAttribute="bottom" id="ZZf-Vo-iUj"/>
                 <constraint firstItem="PF7-8N-ywW" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="ru4-Hr-xik"/>
-                <constraint firstItem="YQA-7I-Pju" firstAttribute="top" secondItem="PF7-8N-ywW" secondAttribute="bottom" constant="2" id="tBp-zh-0ju"/>
                 <constraint firstAttribute="trailing" secondItem="YQA-7I-Pju" secondAttribute="trailing" id="x0u-0E-tJt"/>
             </constraints>
             <size key="customSize" width="133" height="127"/>
